Refactor and cleanup across multiple files
Replaces usages of List.size() > 0 with !List.isEmpty(), improves string and list handling with StringBuilder and direct constructors, updates method references for comparators, and applies minor code style and API usage improvements. Removes unused UploadRecentGameStatistics command, renames PolticsPosition to PoliticsPosition, and moves Ban-related classes to a new package. Also fixes various small bugs and improves code readability throughout the codebase.